@@ -28,6 +28,8 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
   - BREAKING - Move to roles for some permission checking,
                userAdmin role required to edit users
   - BREAKING - the version file lives in common directory now
+  - BREAKING - new defaults maxFileSizeG=12, compressES=true
+  - BREAKING - pcap compression is turned on by default with simpleGzipBlockSize=32000
   - addUser.js - new --roles option, --admin creates superAdmin user
   - cont3xt - new Cont3xt application, see https://arkime.com/cont3xt
   - cont3xt/viewer - share new user UI
